--- a/lang/english.txt
+++ b/lang/english.txt
@@ -1,4 +1,5 @@
 {
+	"car_trunk": "Car trunk:",
 	"config_add": "Add",
 	"config_rmv_veh": "Remove selected vehicle",
 	"config_ent_wl": "Entities whitelist",
@@ -7,7 +8,6 @@
 	"config_ent_class": "Entity class",
 	"config_rmv_ent": "Remove selected entity",
 	"config_open_key": "Opening key",
-	"enable_blur": "Enable blur:",
 	"config_pick_dist": "Pickup's distance",
 	"config_click_keys": "Click on the button to have a list of all available keys",
 	"config_open_dist": "Opening distance",
@@ -19,10 +19,20 @@
 	"config_trunk_config": "Trunk configuration",
 	"config_en_sounds": "Enable sounds",
 	"config_add_ent": "Add entity to whitelist:",
+	"config_weight": "Weight",
+	"config_trunk_space": "Trunk space",
+	"config_space": "Space",
+	"config_cts": "Car trunk system - Configuration menu",
+	"cts_admin_menu": "Car trunk system - Admin menu",
 	"trunk_full": "Your trunk is full.",
 	"config_validate": "Validate",
 	"trunk_locked": "You cannot open the trunk as long as the vehicle is locked.",
+	"trunk_nospace": "You don't have enough space to store this in your trunk.",
 	"close": "Close",
+	"weight": "Weight:",
+	"admin_open": "Open trunk",
+	"admin_clean": "Clean trunk",
+	"admin_dump": "Dump trunk",
 	"config_veh_model": "Vehicle model",
 	"config_main_config": "Main configuration",
 	"trunk_noallowed": "You can't add this in your trunk.",
