--- a/lang/french.txt
+++ b/lang/french.txt
@@ -1,4 +1,5 @@
 {
+	"car_trunk": "Coffre de voiture :",
 	"config_add": "Ajouter",
 	"config_rmv_veh": "Supprimer le véhicule sélectionné",
 	"config_ent_wl": "Whitelist des entités",
@@ -7,7 +8,6 @@
 	"config_ent_class": "Classe de l'entité",
 	"config_rmv_ent": "Supprimer l'entité sélectionnée",
 	"config_open_key": "Touche d'ouverture",
-	"enable_blur": "Activer le flou :",
 	"config_pick_dist": "Distance de ramassage",
 	"config_click_keys": "Cliquer sur le bouton pour avoir une liste des touches disponibles",
 	"config_open_dist": "Distance d'ouverture",
@@ -19,10 +19,20 @@
 	"config_trunk_config": "Configuration du coffre",
 	"config_en_sounds": "Activer les sons",
 	"config_add_ent": "Ajouter une entité à la whitelist :",
+	"config_weight": "Poids",
+	"config_trunk_space": "Espace du coffre",
+	"config_space": "Espace",
+	"config_cts": "Système de coffre de voiture - Menu de configuration",
+	"cts_admin_menu": "Système de coffre de voiture - Menu d'admin",
 	"trunk_full": "Votre coffre est plein.",
 	"config_validate": "Valider",
 	"trunk_locked": "Vous ne pouvez pas ouvrir le coffre tant que le véhicule est fermé.",
+	"trunk_nospace": "Vous n'avez pas assez de place pour ranger cet objet dans le coffre.",
 	"close": "Fermer",
+	"weight": "Poids :",
+	"admin_open": "Ouvrir le coffre",
+	"admin_clean": "Nettoyer le coffre",
+	"admin_dump": "Vider le coffre",
 	"config_veh_model": "Modèle du véhicule",
 	"config_main_config": "Configuration principale",
 	"trunk_noallowed": "Vous ne pouvez pas ajouter ceci dans votre coffre.",
