--- a/lang/english.txt
+++ b/lang/english.txt
@@ -40,4 +40,6 @@
 	"store_info": "Press \"R\" to store this item in the trunk",
 	"config_add_veh": "Add vehicle to blacklist:",
 	"ent_amount": "Amount:"
+	"trunk_dumped": "The trunk has been dumped."
+	"trunk_cleaned": "The trunk has been cleaned."
 }
