--- a/lang/english.txt
+++ b/lang/english.txt
@@ -42,5 +42,6 @@
         "ent_amount": "Amount:",
         "trunk_dumped": "The trunk has been dumped.",
         "trunk_cleaned": "The trunk has been cleaned.",
-        "info": "Info"
+        "info": "Info",
+        "config_en_bodygroups": "Enable bodygroups"
 }
